--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,7 @@
             android:name=".Detail"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Cliente.MainActivityCliente"
             android:exported="true"
             android:theme="@style/Theme.App.Starting">
             <intent-filter>
